force-app/main/default/objects/MPBusinessUnitByMall__c/MPBusinessUnitByMall__c.object-meta.xml
<CustomObject>
    <label>Unidad de negocio por Mall</label>
    <nameField>
        <displayFormat>BBM-{000000}</displayFormat>
        <label>Business Unit By Mall Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unidades de negocio por Mall</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>