force-app/main/default/objects/MPBusinessUnitByMall__c/fields/MPBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>MPBusinessUnit__c</fullName>
    <label>Business Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPBusinessType__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Unidad de Negocio</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MPBusinessType__c</referenceTo>
    <relationshipLabel>Malls</relationshipLabel>
    <relationshipName>Business_Units_By_Mall</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>