force-app/main/default/objects/MPBusinessUnitByMall__c/fields/MPG0__c.field-meta.xml
<CustomField>
    <fullName>MPG0__c</fullName>
    <label>G0</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>