force-app/main/default/objects/MPBusinessUnitByMall__c/fields/MPG3__c.field-meta.xml
<CustomField>
    <fullName>MPG3__c</fullName>
    <label>G3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>