force-app/main/default/objects/MPBusinessUnitByMall__c/fields/MPMall__c.field-meta.xml
<CustomField>
    <fullName>MPMall__c</fullName>
    <label>Mall</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Mall</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unidades de negocio</relationshipLabel>
    <relationshipName>Business_Units_By_Mall</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>