force-app/main/default/objects/MPBusinessUnitByMall__c/listViews/MPAllBusinessUnitByMall.listView-meta.xml
<ListView>
    <fullName>MPAllBusinessUnitByMall</fullName>
    <columns>NAME</columns>
    <columns>MPBusinessUnit__c</columns>
    <columns>MPMall__c</columns>
    <columns>MPG0__c</columns>
    <columns>MPG3__c</columns>
    <columns>MPUsabilityStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>